# pubsub

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
crates/pubsub/: Cargo.toml  README.md
crates/pubsub-broker/: README.md
crates/pubsub-broker/benches/: broker_benchmarks.rs
crates/pubsub-client/: Cargo.toml  README.md
crates/pubsub-client/src/: client.rs  options.rs  subscription_stream.rs
crates/pubsub-core/: Cargo.toml  README.md
crates/pubsub-core/benches/: core_benchmarks.rs
crates/pubsub-core/src/: config.rs  error.rs  lib.rs  topic.rs
crates/pubsub-protocol/: README.md
crates/pubsub-protocol/benches/: protocol_benchmarks.rs
crates/pubsub-server/: Cargo.toml  README.md
crates/pubsub-server/src/: cli.rs  main.rs  shutdown.rs
crates/pubsub-server/tests/: helpers.rs  integration.rs
crates/pubsub-transport-tcp/: Cargo.toml  README.md
crates/pubsub-transport-tcp/src/: connection.rs  listener.rs  session.rs
crates/pubsub/examples/: chat-client.rs  chat-server.rs
crates/pubsub/src/: lib.rs
crates/topiq/: Cargo.toml  README.md
crates/topiq-broker/: Cargo.toml  README.md
crates/topiq-broker/benches/: broker_benchmarks.rs
crates/topiq-broker/src/: lib.rs  queue_group.rs  registry.rs  router.rs  trie.rs
crates/topiq-client/: Cargo.toml  README.md
crates/topiq-client/src/: client.rs  lib.rs  options.rs  subscription_stream.rs
crates/topiq-core/: Cargo.toml  README.md
crates/topiq-core/benches/: core_benchmarks.rs
crates/topiq-core/src/: config.rs  error.rs  lib.rs  message.rs  subscription.rs  topic.rs
crates/topiq-protocol/: Cargo.toml  README.md
crates/topiq-protocol/benches/: protocol_benchmarks.rs
crates/topiq-protocol/src/: codec.rs  frame.rs  lib.rs
crates/topiq-server/: Cargo.toml  README.md
crates/topiq-server/src/: cli.rs  main.rs
crates/topiq-server/tests/: helpers.rs  integration.rs
crates/topiq-transport-tcp/: Cargo.toml  README.md
crates/topiq-transport-tcp/src/: connection.rs  lib.rs  listener.rs  session.rs
crates/topiq/examples/: chat-client.rs  chat-server.rs
crates/topiq/src/: lib.rs
