[workspace]
resolver = "3"
members = [
    "crates/pubsub-core",
    "crates/pubsub-protocol",
    "crates/pubsub-broker",
    "crates/pubsub-transport-tcp",
    "crates/pubsub-server",
    "crates/pubsub-client",
    "crates/topiq",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Elwqnn <elwann.guillemot@epitech.eu>"]
repository = "https://github.com/Elwqnn/pubsub"
homepage = "https://github.com/Elwqnn/pubsub"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
pubsub-core = { path = "crates/pubsub-core", version = "0.1" }
pubsub-protocol = { path = "crates/pubsub-protocol", version = "0.1" }
pubsub-broker = { path = "crates/pubsub-broker", version = "0.1" }
pubsub-transport-tcp = { path = "crates/pubsub-transport-tcp", version = "0.1" }
pubsub-client = { path = "crates/pubsub-client", version = "0.1" }
topiq = { path = "crates/topiq", version = "0.1" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
bytes = "1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_bytes = "0.11"

# Concurrency
dashmap = "6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
