[package]
name = "pubsub-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client library for the pubsub message broker"

[dependencies]
pubsub-core = { workspace = true }
pubsub-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
