[package]
name = "pubsub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for the pubsub message broker"

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
rmp-serde = { workspace = true }
tokio-test = { workspace = true }
