[package]
name = "pubsub-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pubsub message broker server binary"

[dependencies]
pubsub-core = { workspace = true }
pubsub-broker = { workspace = true }
pubsub-transport-tcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
pubsub-client = { workspace = true }
pubsub-protocol = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-test = { workspace = true }
