[package]
name = "topiq-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for the topiq message broker"
readme = "README.md"

[dependencies]
topiq-core = { workspace = true }
topiq-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
